--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,13 @@ ul {
 }
 
 .App {
+  width: 100%;
   height:100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image:url(https://i.blogs.es/f7a1cd/fondo/1366_2000.jpeg);
+  background-image:url(https://images.pexels.com/photos/1118873/pexels-photo-1118873.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-size: cover;
 }
 
 .loader {
@@ -25,7 +27,7 @@ ul {
   border-radius: 20px;
   border: 1px;
   padding: 20px;
-  background-image: linear-gradient(rgb(0, 204, 255),yellow);
+  background-image: linear-gradient(rgb(0, 89, 255),rgb(0, 255, 221));
   
 }
 .head {
