--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 //? Components
 @use "./components/cardWeather";
 @use "./components/weatherCityName";
+@use "./components/loading";
 
 
 // ? title
@@ -14,7 +15,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   background:url(https://images.pexels.com/photos/158163/clouds-cloudporn-weather-lookup-158163.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-size: cover;
   height: 100vh;
 }
