--- a/src/sass/components/_weatherCityName.scss
+++ b/src/sass/components/_weatherCityName.scss
@@ -1,15 +1,37 @@
-.form_weather{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
-.btn_form{
-  transition: transform .1s ease-out;
-}
-.btn_form:hover{
-  transform: scale(1.2);
-}
-.btn_form:active{
-  background-color: rebeccapurple;
+@use "../utils/mixins" as mix;
+
+.card__search {
+  width: 500px;
+  height: 380px;
+  border-radius: 10px;
+  padding: 2rem;
+  background-color: rgba(255, 255, 255, 0.219);
+
+  .form__weather {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    
+    .form__input{
+      width: 20rem;
+      height: 2rem;
+      border-radius: 10px;
+      padding-left:1rem ;
+      font-weight: 600;
+      transition: transform .1s ease-in-out ;
+    }
+    .form__input:hover{
+      transform: scale(1.02);
+    }
+    .form__btn{
+      width: 4rem;
+      height: 2rem;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform .1s ease-in-out ;
+    }
+    .form__btn:hover{
+      transform: scale(1.05);
+    }
+  }
 }
