--- a/src/sass/components/_weatherCityName.scss
+++ b/src/sass/components/_weatherCityName.scss
@@ -1,6 +1,9 @@
 @use "../utils/mixins" as mix;
 
 .card__search {
+  @include mix.flex_center;
+  flex-direction: column;
+  gap: 1rem;
   width: 500px;
   height: 380px;
   border-radius: 10px;
